--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ jupyter-console==6.3.0
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+lxml==4.6.3
 MarkupSafe==1.1.1
 mistune==0.8.4
 nbclient==0.5.3
