--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 chromedriver-py==88.0.4324.96
+click==7.1.2
 decorator==4.4.2
 defusedxml==0.7.1
 entrypoints==0.3
 et-xmlfile==1.0.1
+greenlet==1.1.0
 idna==2.10
 ipykernel==5.5.0
 ipython==7.21.0
@@ -35,6 +37,7 @@ nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
+nltk==3.5
 notebook==6.2.0
 numpy==1.20.0
 openpyxl==3.0.7
@@ -56,6 +59,7 @@ pytz==2021.1
 pyzmq==22.0.3
 qtconsole==5.0.3
 QtPy==1.9.0
+regex==2021.3.17
 requests==2.25.1
 scikit-learn==0.24.1
 scipy==1.6.1
@@ -63,12 +67,15 @@ selenium==3.141.0
 Send2Trash==1.5.0
 six==1.15.0
 soupsieve==2.2.1
+SQLAlchemy==1.4.20
 terminado==0.9.3
 testpath==0.4.4
 threadpoolctl==2.1.0
 tornado==6.1
+tqdm==4.59.0
 traitlets==5.0.5
 urllib3==1.26.4
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+XlsxWriter==1.3.7
