--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ pytz==2021.1
 pyzmq==22.0.3
 qtconsole==5.0.3
 QtPy==1.9.0
+rank-bm25==0.2.1
 regex==2021.3.17
 requests==2.25.1
 scikit-learn==0.24.1
