--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ backcall==0.2.0
 beautifulsoup4==4.9.3
 biopython==1.78
 bleach==3.3.0
+blis==0.7.4
+catalogue==2.0.4
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 chromedriver-py==88.0.4324.96
 click==7.1.2
+cymem==2.0.5
 decorator==4.4.2
 defusedxml==0.7.1
 entrypoints==0.3
@@ -33,6 +36,7 @@ jupyterlab-widgets==1.0.0
 lxml==4.6.3
 MarkupSafe==1.1.1
 mistune==0.8.4
+murmurhash==1.0.5
 nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.2
@@ -45,12 +49,15 @@ packaging==20.9
 pandas==1.2.3
 pandocfilters==1.4.3
 parso==0.8.1
+pathy==0.6.0
 pexpect==4.8.0
 pickleshare==0.7.5
+preshed==3.0.5
 prometheus-client==0.9.0
 prompt-toolkit==3.0.17
 ptyprocess==0.7.0
 pycparser==2.20
+pydantic==1.8.2
 Pygments==2.8.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
@@ -67,15 +74,23 @@ scipy==1.6.1
 selenium==3.141.0
 Send2Trash==1.5.0
 six==1.15.0
+smart-open==5.1.0
 soupsieve==2.2.1
+spacy==3.1.1
+spacy-legacy==3.0.8
 SQLAlchemy==1.4.20
+srsly==2.4.1
 terminado==0.9.3
 testpath==0.4.4
+thinc==8.0.8
 threadpoolctl==2.1.0
 tornado==6.1
 tqdm==4.59.0
 traitlets==5.0.5
+typer==0.3.2
+typing-extensions==3.10.0.0
 urllib3==1.26.4
+wasabi==0.8.2
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
