--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,17 @@
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==20.3.0
-backcall==0.2.0
 beautifulsoup4==4.9.3
 biopython==1.78
-bleach==3.3.0
-blis==0.7.4
-catalogue==2.0.4
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
 chromedriver-py==88.0.4324.96
-click==7.1.2
-cymem==2.0.5
-decorator==4.4.2
-defusedxml==0.7.1
-entrypoints==0.3
-et-xmlfile==1.0.1
-greenlet==1.1.0
-idna==2.10
-ipykernel==5.5.0
-ipython==7.21.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.0.1
-jsonschema==3.2.0
+gensim==4.0.1
 jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.3.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
 lxml==4.6.3
-MarkupSafe==1.1.1
-mistune==0.8.4
-murmurhash==1.0.5
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.5.1
 nltk==3.5
-notebook==6.2.0
-numpy==1.20.0
 openpyxl==3.0.7
-packaging==20.9
 pandas==1.2.3
-pandocfilters==1.4.3
-parso==0.8.1
-pathy==0.6.0
-pexpect==4.8.0
-pickleshare==0.7.5
-preshed==3.0.5
-prometheus-client==0.9.0
-prompt-toolkit==3.0.17
-ptyprocess==0.7.0
-pycparser==2.20
-pydantic==1.8.2
-Pygments==2.8.1
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
-pyzmq==22.0.3
-qtconsole==5.0.3
-QtPy==1.9.0
+pipdeptree==2.1.0
 rank-bm25==0.2.1
-regex==2021.3.17
-requests==2.25.1
 scikit-learn==0.24.1
-scipy==1.6.1
 selenium==3.141.0
-Send2Trash==1.5.0
-six==1.15.0
-smart-open==5.1.0
-soupsieve==2.2.1
 spacy==3.1.1
-spacy-legacy==3.0.8
 SQLAlchemy==1.4.20
-srsly==2.4.1
-terminado==0.9.3
-testpath==0.4.4
-thinc==8.0.8
-threadpoolctl==2.1.0
-tornado==6.1
-tqdm==4.59.0
-traitlets==5.0.5
-typer==0.3.2
-typing-extensions==3.10.0.0
-urllib3==1.26.4
-wasabi==0.8.2
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
+wheel==0.36.2
 XlsxWriter==1.3.7
