--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,11 @@ lxml==4.6.3
 nltk==3.5
 openpyxl==3.0.7
 pandas==1.2.3
-pipdeptree==2.1.0
 rank-bm25==0.2.1
 scikit-learn==0.24.1
 selenium==3.141.0
-spacy==3.1.1
+streamlit==0.86.0
 SQLAlchemy==1.4.20
 wheel==0.36.2
 XlsxWriter==1.3.7
+PyYAML==5.4.1
